--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,21 +1,21 @@
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1559443922-3f698a0ff27a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1338&q=80);">
-  <div class="container">
-    <h1>Cocktails</h1>
-    <p>Fresh awesomeness</p>
-    <%= link_to "See the cocktails", "#", class: "btn btn-flat" %>
+  <div class="container-banner">
+    <h1>Night</h1>
+    <%= link_to "See the cocktails", cocktails_path(anchor: "cocktails-cards"), class: "btn btn-flat" %>
   </div>
 </div>
 
-<div class="container">
+<div class="container-cocktails">
+  <header class="col-md-12 text-center">
+    <h2>A NIGHT ESCAPE</h2>
+    <span class="divider"></span>
+  </header>
   <div class="cocktail-cards">
-    <div class="cocktail-card">
-      <ul>
-        <% @cocktails.each do |cocktail| %>
-         <li><%= link_to cocktail.name, cocktail_path(cocktail) %></li>
-        <% end %>
-      </ul>
-    </div>
+    <% @cocktails.each do |cocktail| %>
+      <div class="cocktail-card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
+           <%= link_to cocktail.name, cocktail_path(cocktail) %>
+      </div>
+    <% end %>
   </div>
-
   <p><%= link_to "Add a cocktail", new_cocktail_path %></p>
 </div>
