--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,21 +1,37 @@
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1559443922-3f698a0ff27a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1338&q=80);">
   <div class="container-banner">
     <h1>Night</h1>
-    <%= link_to "See the cocktails", cocktails_path(anchor: "cocktails-cards"), class: "btn btn-flat" %>
+    <%= link_to "See the cocktails", cocktails_path(anchor: 'cocktail-cards'), class: "btn-flat" %>
   </div>
 </div>
 
 <div class="container-cocktails">
   <header class="col-md-12 text-center">
     <h2>A NIGHT ESCAPE</h2>
-    <span class="divider"></span>
+    <span class="divider-2"></span>
   </header>
-  <div class="cocktail-cards">
+  <div class="cocktail-cards col-md-12 text-center">
     <% @cocktails.each do |cocktail| %>
-      <div class="cocktail-card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
+      <div class="cocktail-card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path cocktail.photo.key, height: 300, width: 400, crop: :fill %>')">
            <%= link_to cocktail.name, cocktail_path(cocktail) %>
       </div>
     <% end %>
   </div>
-  <p><%= link_to "Add a cocktail", new_cocktail_path %></p>
+  <div class="add-cocktail col-md-12 text-center">
+    <h2 class="pulse"><%= link_to "ADD YOUR COCKTAIL", new_cocktail_path %></h2>
+    <span class="divider-2"></span>
+  </div>
+</div>
+
+<div class="footer">
+  <div class="footer-links">
+    <a href="#"><i class="fab fa-github"></i></a>
+    <a href="#"><i class="fab fa-instagram"></i></a>
+    <a href="#"><i class="fab fa-facebook"></i></a>
+    <a href="#"><i class="fab fa-twitter"></i></a>
+    <a href="#"><i class="fab fa-linkedin"></i></a>
+  </div>
+  <div class="footer-copyright">
+    This footer is made with <i class="fas fa-heart"></i> by Mathilde
+  </div>
 </div>
