--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,5 +1,5 @@
 <h1><%= @cocktail.name %></h1>
-
+<p><%= cl_image_tag @cocktail.photo.key, height: 300, width: 400, crop: :fill %></p>
 <ul>
   <% @doses.each do |dose| %>
    <li>Please add: <%= dose.description %> <em><strong><%= dose.ingredient.name %></em></strong><%= link_to '🗑', cocktail_dose_path(dose), method: :delete, data: { confirm: "U sure u want to delete this dose?" }  %></li>
